# MC714-Trabalho-2

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: algorithm-traceability.md  decision-log.md  references.md
docs/results/: README.md  experiment-summary.csv  raw-results.json
relatorio-latex/: .gitignore  README.md  main.tex
relatorio-latex/sections/: 01-introducao.tex  02-objetivos.tex  03-arquitetura.tex  04-desenvolvimento.tex  05-validacao.tex  06-conclusao.tex  07-fontes-codigo.tex  08-uso-de-ia.tex  referencias.tex
scripts/: demo.py  run_experiments.py  smoke_election.py  smoke_http.py  smoke_lamport.py  smoke_mutex.py
src/node/: __init__.py  clock.py  election.py  main.py  models.py  mutex.py  state.py  transport.py
src/resource/: __init__.py  main.py
tests/unit/: test_clock.py  test_election.py  test_models.py  test_mutex.py  test_state.py
